// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`MobileControls component > should match a snapshot 1`] = `
<DocumentFragment>
  <div
    aria-hidden="true"
    class="mocked-styled-0 el-mobile-controls-bg"
  />
  <div
    class="mocked-styled-1 el-mobile-controls"
    id=":r0:"
  >
    <button
      aria-controls=":r0:"
      aria-disabled="false"
      class="el-deprecated-floating-button el-deprecated-button-size-medium el-deprecated-button-icon-only el-deprecated-button"
      data-variant="primary"
      role="button"
    >
      <div
        class="mocked-styled-4 el-deprecated-button-spinner"
      />
      <span
        class="mocked-styled-3 el-deprecated-icon"
      >
        <svg
          fill="none"
          height="1em"
          role="img"
          title="Icon image with name menu"
          viewBox="0 0 24 24"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M20 11H4C3.44772 11 3 11.4477 3 12C3 12.5523 3.44772 13 4 13H20C20.5523 13 21 12.5523 21 12C21 11.4477 20.5523 11 20 11ZM4 7H20C20.5523 7 21 6.55228 21 6C21 5.44772 20.5523 5 20 5H4C3.44772 5 3 5.44772 3 6C3 6.55228 3.44772 7 4 7ZM20 17H4C3.44772 17 3 17.4477 3 18C3 18.5523 3.44772 19 4 19H20C20.5523 19 21 18.5523 21 18C21 17.4477 20.5523 17 20 17Z"
            fill="currentColor"
          />
        </svg>
      </span>
    </button>
  </div>
</DocumentFragment>
`;

exports[`MobileControls component > should match a snapshot with full props 1`] = `
<DocumentFragment>
  <div
    aria-hidden="true"
    class="mocked-styled-0 el-mobile-controls-bg"
  />
  <div
    class="el-mobile-controls-visible el-mobile-controls"
    id=":r1:"
  >
    <a
      aria-hidden="true"
      class="mocked-styled-2 el-mobile-control-item"
      role="button"
    >
      Item One
    </a>
    <a
      aria-hidden="true"
      class="mocked-styled-2 el-mobile-control-item"
      role="button"
    >
      Item Two
    </a>
    <a
      aria-hidden="true"
      class="mocked-styled-2 el-mobile-control-item"
      role="button"
    >
      Item Three
    </a>
    <button
      aria-controls=":r1:"
      aria-disabled="false"
      class="el-deprecated-floating-button el-deprecated-button-size-medium el-deprecated-button-icon-only el-deprecated-button"
      data-variant="primary"
      role="button"
    >
      <div
        class="mocked-styled-4 el-deprecated-button-spinner"
      />
      <span
        class="mocked-styled-3 el-deprecated-icon"
      >
        <svg
          fill="none"
          height="1em"
          role="img"
          title="Icon image with name add"
          viewBox="0 0 24 24"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M20 11H13V4C13 3.44772 12.5523 3 12 3C11.4477 3 11 3.44772 11 4V11H4C3.44772 11 3 11.4477 3 12C3 12.5523 3.44772 13 4 13H11V20C11 20.5523 11.4477 21 12 21C12.5523 21 13 20.5523 13 20V13H20C20.5523 13 21 12.5523 21 12C21 11.4477 20.5523 11 20 11Z"
            fill="currentColor"
          />
        </svg>
      </span>
    </button>
  </div>
</DocumentFragment>
`;
